--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,13 @@ dependencies:
   readmore: ^3.0.0
   carousel_slider: ^5.0.0
   smooth_page_indicator: ^1.2.0+3
+  dartz: ^0.10.1
+  dio: ^5.8.0+1
+  pretty_dio_logger: ^1.4.0
+  connectivity_plus: ^6.1.4
+  flutter_bloc: ^9.1.1
+  injectable: ^2.5.0
+  get_it: ^8.0.3
 
 dev_dependencies:
   flutter_test:
@@ -58,6 +65,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  build_runner: ^2.4.15
+  injectable_generator: ^2.7.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
